featured sec added

--- a/index.html
+++ b/index.html
@@ -187,13 +187,18 @@
             <div class="card-footer"><button>see more <i class='bx bx-right-arrow-alt'></i></button></div>
         </div>
         <div class="featured-container">
-            <div class="">
+            <div class="featured-photo">
                 <img src="images/gear.png" alt="">
             </div>
             <div class="featured-contant">
                 <h1 class="featured-header">Featured products at one place</h1>
-                <p class="featured-descriotion">Discover excellence in every detail with our curated collection of Featured Products. From innovative gadgets to timeless classics, explore a handpicked selection that combines quality, style, and performance—bringing you the best in every category.</p>
-                <button class="join-now">Join Now</button>
+                <p class="featured-description">Discover excellence in every detail with our curated collection of Featured Products. From innovative gadgets to timeless classics, style, and performance—bringing you the best in every category.</p>
+                <button class="join-now">
+                    <div class="btn-join">
+                        <p>Join Now</p>
+                        <i class='bx bx-right-arrow-alt'></i>
+                    </div>
+                </button>
             </div>
         </div>
     </main>
