--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="products-header">
                 <h1 >popular collection</h1>
             </div>
-            <div class="porducts-cards">
+            <div class="products-cards">
                 <div class="card">
                     <img src="images/tripod.png" alt="">
                     <h3>Flex Tripod</h3>
